RESOLVED FIXED122159
[TexMap] CSS filter not working on software composited layers
https://bugs.webkit.org/show_bug.cgi?id=122159
Summary [TexMap] CSS filter not working on software composited layers
Allan Sandfeld Jensen
Reported 2013-10-01 07:23:42 PDT
We removed support for basic CSS filters on TextureMapperImageBuffer half a year ago, and we never supported CSS shaders. WebCore does however support software fallbacks of CSS filters, the only reason they are not used is because GraphicsLayerTextureMapper is claiming to support CSS filters.
Attachments
Patch (2.65 KB, patch)
2013-10-01 07:27 PDT, Allan Sandfeld Jensen
noam: review+
Allan Sandfeld Jensen
Comment 1 2013-10-01 07:27:26 PDT
Allan Sandfeld Jensen
Comment 2 2013-10-01 07:57:17 PDT
Note You need to log in before you can comment on or make changes to this bug.