[Texmap] CSS filter not working on software composited layers https://bugs.webkit.org/show_bug.cgi?id=122159

Reviewed by Noam Rosenthal.

Tell the rendering layer we do not support CSS filters when we do not. This
will make RenderLayer fall back to using its own software implementation.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::setFilters):
* platform/graphics/texmap/TextureMapperImageBuffer.cpp:
(WebCore::BitmapTextureImageBuffer::applyFilters):

Canonical link: https://commits.webkit.org/140206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156710 268f45cc-cd09-0410-ab3c-d52691b4dbfc