Source/WebCore/platform/graphics/texmap/GraphicsLayerTextureMapper.cpp
@@ -670,6 +670,10 @@ void GraphicsLayerTextureMapper::removeAnimation(const String& animationName)
 #if ENABLE(CSS_FILTERS)
 bool GraphicsLayerTextureMapper::setFilters(const FilterOperations& filters)
 {
+    TextureMapper* textureMapper = m_layer->textureMapper();
+    // TextureMapperImageBuffer does not support CSS filters.
+    if (!textureMapper || textureMapper->accelerationMode() == TextureMapper::SoftwareMode)
+        return false;
     notifyChange(FilterChange);
     return GraphicsLayer::setFilters(filters);
 }
