Source/WebCore/platform/graphics/texmap/TextureMapperImageBuffer.cpp
@@ -165,6 +165,7 @@ void TextureMapperImageBuffer::drawNumber(int /* number */, const Color&, const 
 #if ENABLE(CSS_FILTERS)
 PassRefPtr<BitmapTexture> BitmapTextureImageBuffer::applyFilters(TextureMapper*, const FilterOperations&)
 {
+    ASSERT_NOT_REACHED();
     return this;
 }
 #endif
